--- a/Quizly/src/main/java/com/quizly/Components/QuestionComponent.form
+++ b/Quizly/src/main/java/com/quizly/Components/QuestionComponent.form
@@ -7,6 +7,9 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[900, 600]"/>
+    </Property>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
@@ -50,16 +53,16 @@
                           <Component id="questionNoLbl" min="-2" pref="27" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="questionLbl" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="option2" min="-2" pref="100" max="-2" attributes="0"/>
-                                      <Component id="option1" min="-2" pref="100" max="-2" attributes="0"/>
-                                      <Component id="option3" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                                      <Component id="option4" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="option1" alignment="0" pref="593" max="32767" attributes="0"/>
+                                      <Component id="option2" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="option3" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="option4" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="questionLbl" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
